# chimera

./: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  pyproject.toml  requirements.txt
chimera_core/: __init__.py
chimera_core/ai_core/: __init__.py  agents.py  client.py
chimera_core/knowledge_base/: __init__.py  client.py  manager.py  schemas.py
chimera_core/schemas/: __init__.py  ai_responses.py  game_objects.py
chimera_core/utils/: __init__.py  async_helpers.py  logging_config.py  structured_generation.py
evennia_game/commands/: ai_commands.py  default_cmdsets.py
evennia_game/server/conf/: settings.py
evennia_game/typeclasses/: ai_manager.py  characters.py  rooms.py
