[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-core"
version = "0.1.0"
authors = [
  { name="Project Chimera Team", email="author@example.com" },
]
description = "Core libraries for the Chimera LLM-powered world engine."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "evennia>=4.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.11.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "colorlog>=6.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "jsonschema>=4.17.0",
    "asyncio-throttle>=1.0.2",
    "psutil>=5.9.0",
]

[project.urls]
"Homepage" = "https://github.com/example/chimera"
"Bug Tracker" = "https://github.com/example/chimera/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chimera_core*"]
exclude = ["evennia_game*"]
